--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.jboss.pnc.rpm</groupId>
   <artifactId>eap8-apache-sshd</artifactId> <!-- used as package name -->
-  <version>2.14.0</version> <!-- used as version -->
+  <version>2.14.0-1</version> <!-- used as version -->
   <packaging>rpm</packaging> <!-- Primary Artifact Configuration -->
 
   <name>Apache Mina SSHD</name> <!-- used for "summary" field -->
@@ -17,10 +16,6 @@
 
   <url>https://github.com/apache/mina-sshd</url> <!-- used for URL field -->
 
-  <!--
-  Packager: Jens Reimann <http:/dentrassi.de>
-  Vendor: Jens Reimann
-  -->
   <organization>
     <name>Red Hat, Inc. &lt;http://bugzilla.redhat.com/bugzilla&gt;</name>
     <url>Red Hat, Inc.</url>
@@ -32,6 +27,7 @@
     <!-- For managing PGP Signing of RPM -->
     <rpm.skipSigning>true</rpm.skipSigning> <!-- Primary Artifact Configuration(s) -->
 
+    <!-- Can't use project.version as this project may be built differently to dependent build -->
     <sshd>2.14.0</sshd>
   </properties>
 
@@ -39,6 +35,11 @@
     <dependency>
       <groupId>org.apache.sshd</groupId>
       <artifactId>sshd-common</artifactId>
+      <version>${sshd}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sshd</groupId>
+      <artifactId>sshd-core</artifactId>
       <version>${sshd}</version>
     </dependency>
   </dependencies>
@@ -62,6 +63,12 @@
                 <artifactItem>
                   <groupId>org.apache.sshd</groupId>
                   <artifactId>sshd-common</artifactId>
+                  <version>${sshd}</version>
+                  <type>jar</type>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.apache.sshd</groupId>
+                  <artifactId>sshd-core</artifactId>
                   <version>${sshd}</version>
                   <type>jar</type>
                 </artifactItem>
@@ -110,8 +117,10 @@
             </goals>
 
             <configuration>
+              <attach>true</attach>
               <group>Development/Java</group> <!-- set RPM group -->
-              <release>1.redhat_00001.1.el9eap</release>
+              <!--- TODO: How to easily configure this? -->
+              <release>2.redhat_00002.1.el8eap</release>
 
               <!-- rule sets -->
               <rulesets>
@@ -152,6 +161,10 @@
                 <entry>
                   <name>/opt/rh/eap8/root/usr/share/java/sshd-common.jar</name>
                   <linkTo>sshd-common-${sshd}.jar</linkTo>
+                </entry>
+                <entry>
+                  <name>/opt/rh/eap8/root/usr/share/java/sshd-core.jar</name>
+                  <linkTo>sshd-core-${sshd}.jar</linkTo>
                 </entry>
 
                 <!-- Adds misc extra files -->
